force-app/main/default/objects/dw_ecard_app_dat_discrepancy_type__x/dw_ecard_app_dat_discrepancy_type__x.object-meta.xml
<CustomObject>
    <description>dw_ecard_app$dat_discrepancy_type</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_ecard_app$dat_discrepancy_type</externalName>
    <label>dw_ecard_app$dat_discrepancy_type</label>
    <pluralLabel>dw_ecard_app$dat_discrepancy_type</pluralLabel>
</CustomObject>