force-app/main/default/objects/dw_ecard_app_dat_discrepancy_type__x/fields/dat_discrepancy_type_id__c.field-meta.xml
<CustomField>
    <fullName>dat_discrepancy_type_id__c</fullName>
    <description>dat_discrepancy_type_id</description>
    <externalDeveloperName>dat_discrepancy_type_id</externalDeveloperName>
    <label>dat_discrepancy_type_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>