force-app/main/default/objects/dw_ecard_app_dat_discrepancy_type__x/fields/discrepancy_type_name__c.field-meta.xml
<CustomField>
    <fullName>discrepancy_type_name__c</fullName>
    <description>discrepancy_type_name</description>
    <externalDeveloperName>discrepancy_type_name</externalDeveloperName>
    <label>discrepancy_type_name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>